--- a/notes.tex
+++ b/notes.tex
@@ -198,19 +198,61 @@ are random variables that take on  where \(\mathcal{A},
 \mathcal{S}, \mathcal{R}\) are the set of all actions and
 states. 
 
+In the case of a finite Markov Decision Process, the random variables have
+discrete probability distributions, and we can describe the joint probability that the
+next state and reward takes on a certain value as a function of the previous
+state and action:
+\[p(s',r | s,a) = P(S_t = s', R_t = r'| S_{t-1} = s, A_{t-1} = a)\]
+which satisfies:
+\[\sum_{s \in \mathcal{S}} \sum_{r \in \mathcal{R}}p(s',r|s,a) = 1\]
+We have essentially assumed that the probability for each value of \(S_t\) and
+\(R_t\) depends only on the immediate past, \(S_{t-1}\) and \(A_{t-1}\), which
+is what makes this a Markov process. This has ramifications for what the state
+represents: it must contain ``The state must include information about all aspects
+of the past agent–environment interaction that make a difference for the future''
+
 The agent seeks to maximize expected return \(G_t\), some function of the
 rewards. It is nice to use a discounted sum of the form:
 \[G_t = R_{t+1} + \gamma R_{t+2} + \gamma^2 R_{t+3} + \dots =
 \sum_{k=0}^{\infty}\gamma^k R_{t+k+1}, \ \gamma \in [0,1]\]
-
+From this, we can see the recursive relationship for returns:
+\[G_t = R_{t+1} + \gamma G_{t+1}\]
 A policy \(\pi: \mathcal{S} \to \RR\) is a mapping from a state to a
 probability of selecting an action, where if the agent is following the policy
 \(\pi\), \(P(A_t = a | S_t = s) = \pi(a|s)\). The state-value function \(v_{\pi}\) is
 the expected return in the state \(s\) of following \(\pi\): 
-\[v_{\pi}(s) = E(G_t | S_t = s\]
+\[v_{\pi}(s) = E(G_t | S_t = s)\]
 and the action-value function \(q_{\pi}\):
 \[q_{\pi}(s,a) = E(G_t | S_t = s, A_t = a)\]
 The value functions can be estimated by sample averages of the rewards received
-under certain 
+under certain policies, actions, and states, i.e. if we keep averages of actual
+returns in all the states we encounter, we can estimate \(v_{\pi}\), and if we keep seperate
+averages depending on our actions, we estimate \(q_{\pi}\).
+
+\subsection{The Bellman Equation}
+Recall the definition of a (discrete) conditional expectation, if \(X\) is a
+random variable taking on values \(\{x_i\}_{i \in I}\):
+\[E(X|Y) = \sum_{i \in I} x_i P(X=x_i | Y)\]
+Furthermore, we can use the recursive relationship for returns we observed
+earlier to derive a condition for any state \(s\) and its possible successor
+states:
+\begin{gather*}
+	v_{\pi}(s) = E(R_{t+1} + \gamma G_{t+1}|S_t = s) \text{ since } G_t = R_{t+1} + \gamma G_{t+1} \\
+	= \sum_{a \in \mathcal{A}}\pi(a|s) \sum_{s' \in \mathcal{S}} \sum_{r \in \mathcal{R}}p(s', r | s,a) \left[r + \gamma E(G_{t+1} | S_{t+1} = s') \right] \\
+	\boxed{v_{\pi}(s) = \sum_{a \in \mathcal{A}}\pi(a|s) \sum_{s' \in \mathcal{S}} \sum_{r \in \mathcal{R}}p(s', r | s,a) [r + \gamma v_{\pi}(s')]}
+\end{gather*}
+The last line is the Bellman Equation: at any given state \(s\), the agent will
+take an action based on the policy \(\pi\). Then, the environment will respond
+by presenting a new state \(s'\) and reward \(r\). What we obtain is the
+weighted average over all the possible \(s'\) and \(r\) defined by the Markovian
+dynamics of the system established earlier.
+
+\subsection{Optimality}
+
+Our goal with a reinforcement learning problem is essentially to find the
+highest yielding policy. Value functions provide a partial ordering over
+policies: \(\pi\) is better than or equal to \(\pi'\) if \(v_{\pi}(s) \ge
+v_{\pi'}(s) \ \forall s \in \mathcal{S}\).
+
 
 \end{document}
